# qcm_sonar

./: README.md  __init__.py  __main__.py  fractal.py  julia_plot.py  mandelbrot_plot.py  sonar-project.properties  tox.ini  utils.py
mandelbrot_julia/: setup.cfg
mandelbrot_julia/doc/source/: README.md  conf.py  index.rst  mandelbrot_julia.rst  modules.rst
mandelbrot_julia/mandelbrot_julia/: __init__.py  __main__.py  mandelbrot_plot.py  test_mandelbrot_julia.py
mandelbrot_julia/mandelbrot_julia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
