[metadata]
name = mandelbrot_julia
author = Camille Revol
author_email = camille.revol@eleves.ec-nantes.fr
version = 1.0
description = Permet d afficher les ensembles de Mandelbrot et Julia
long_description = file: readme.md
long_description_content_type = "text/markdown"

[options]
packages = find:
python_requires = >= 3.8
install_requires = 
    pytest
    numpy
    matplotlib
    # Liste des dépendances externes

[options.entry_points]
console_scripts =
    JuliaPlot=mandelbrot_julia.julia_plot:julia_plot
    MandelbrotPlot=mandelbrot_julia.mandelbrot_plot:mandelbrot_plot
[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS